<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brown Bag Lunch France</string>

    <!-- Splash Screen -->
    <string name="splash_title">Brown Bag Lunch</string>
    <string name="splash_subtitle"><![CDATA[Les meilleurs <em>experts</em>, pour un midi <em>chez vous</em>, gratuitement&nbsp;!]]></string>
    <string name="splash_error_network_title">Connexion Internet requise</string>
    <string name="splash_error_network_content">Une connexion à Internet est nécessaire au premier lancement pour télécharger les données de l\'application.\n\nVeuillez activer Internet et relancez ensuite l\'application.</string>
    <string name="splash_error_unknown_title">Une erreur interne est survenue</string>
    <string name="splash_error_unknown_content">Vérifiez que vous êtes bien connecté à Internet et relancez l\'application.\n\nSi cela ne fonctionne toujours pas, ce doit être un problème de notre côté. Dans ce cas, rééssayez ultérieurement.</string>
    <string name="splash_error_button_prefs">Paramètres</string>
    <string name="splash_error_button_exit">Quitter</string>

    <!-- Navigation Drawer -->
    <string name="drawer_title">Brown Bag Lunch</string>
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>
    <string name="drawer_find_bagger">Trouver un expert à inviter</string>
    <string name="drawer_choose_city">Changer de ville</string>
    <string name="drawer_how_to">Comment ça marche ?</string>
    <string name="drawer_where_to">Où proposer un BBL ?</string>
    <string name="drawer_settings">Paramètres</string>
    <string name="drawer_flavor_default"></string>
    <string name="drawer_flavor_hr">RH</string>

    <!-- Baggers -->
    <string name="baggers_map_toolbar_title">Sélectionnez une ville…</string>
    <string name="baggers_list_toolbar_title">Brown Bag Lunch %s</string>
    <string name="baggers_list_toolbar_title_one">1 résultat à %s</string>
    <string name="baggers_list_toolbar_title_many">%1$d résultats à %2$s</string>
    <string name="baggers_list_location"><![CDATA[<b>Lieux :</b> %s]]></string>
    <string name="baggers_list_contact_button">Invitez-moi chez vous !</string>
    <string name="baggers_list_contact_chooser_title">Contacter ce bagger par email</string>
    <string name="baggers_list_contact_email_subject">Contact pour un BBL</string>
    <string name="baggers_map_error">Erreur : impossible de récupérer la liste des villes</string>

    <!-- Baggers filtering -->
    <string name="filter_toolbar_action">Filtrer</string>
    <string name="filter_header">Filtrer par tags</string>

    <!-- Search -->
    <string name="baggers_search_toolbar_title">Rechercher un Bagger</string>

    <!-- Map -->
    <string name="map_network_issue">Erreur lors du chargement de la carte.\nVérifiez votre connexion Internet et réessayez.</string>
    <string name="map_reload_button">Recharger</string>

    <!-- Locations -->
    <string name="location_toolbar_title">Où proposer un BBL ?</string>
    <string name="location_name"><![CDATA[<u>%s</u>]]></string>
    <string name="location_contact"><![CDATA[<br /><b>Infos et contact&nbsp;:</b><br /> %s]]></string>
    <string name="location_audience"><![CDATA[<br /><b>Audience&nbsp;:</b><br /> %s]]></string>
    <string name="location_interests"><![CDATA[<br /><b>Centres d\'intérêts&nbsp;:</b><br /> %s]]></string>

    <!-- About -->
    <string name="about_title">Comment ça marche ?</string>
    <string name="about_step1_title">1. Trouver un orateur</string>
    <string name="about_step1_content">Trouver un expert près de chez vous ayant un sujet qui vous intéresse.\nContactez-le pour définir une date.</string>
    <string name="about_step2_title">2. Lui acheter à manger</string>
    <string name="about_step2_content">L\'expert apporte ses connaissances, vous la nourriture ;)</string>
    <string name="about_step3_title">3. Passer un bon moment</string>
    <string name="about_step3_content">Profiter de la présence de l\'expert pour approfondir un sujet et à le rendre plus concret dans le cadre de votre entreprise.</string>
    <string name="about_quote_content">\"À chaque fois, le public a apprécié la qualité des présentations, et de mon côté en tant qu\'organisateur, j\'apprécie de voir leur enthousiasme.\nLeur nombre ne cesse d\'ailleurs de croitre, passant de 20 à 25, et peut-être même d\'avantage pour les prochaines sessions.\"</string>
    <string name="about_quote_author">Romain Linsolas</string>
    <string name="about_quote_link">Consulter l\'article</string>

    <!-- Settings -->
    <string name="settings_title">Paramètres</string>

    <string name="settings_data">Données</string>
    <string name="settings_data_hr_title">Ressources Humaines</string>
    <string name="settings_data_hr_enter_summary">Passer en mode BBL RH</string>
    <string name="settings_data_hr_leave_summary">Quitter le mode BBL RH</string>

    <string name="settings_about">À propos</string>
    <string name="settings_about_version_title">Version</string>
    <string name="settings_about_bblfr_title">Brown bag lunch France</string>
    <string name="settings_about_bblfr_summary">http://www.brownbaglunch.fr/</string>
    <string name="settings_about_rate_title">Notez l\'application</string>
    <string name="settings_about_rate_summary">sur le Play Store</string>
    <string name="settings_about_sources_title">Code source</string>
    <string name="settings_about_sources_summary">https://github.com/Nilhcem/bblfr-android/</string>
    <string name="settings_about_nilhcem_title">Fait maison par</string>
    <string name="settings_about_nilhcem_summary">http://www.nilhcem.com/</string>
</resources>
