<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:padding="4dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/info_window_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        tools:text="Société Générale - SGCIB"/>

    <TextView
        android:id="@+id/info_window_address"
        style="@style/LocationInfoWindow.SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tours SG, La Défense (92)"/>

    <TextView
        android:id="@+id/info_window_contact"
        style="@style/LocationInfoWindow.SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/location_contact"/>

    <TextView
        style="@style/LocationInfoWindow.SmallText"
        android:id="@+id/info_window_audience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/location_audience"/>

    <TextView
        style="@style/LocationInfoWindow.SmallText"
        android:id="@+id/info_window_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/location_interests"/>
</LinearLayout>
