<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:padding="4dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/info_window_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        android:textSize="18sp"
        android:includeFontPadding="false"
        app:typeface="roboto_condensed_bold"
        tools:textStyle="bold"
        tools:text="Société Générale - SGCIB"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/info_window_address"
        style="@style/LocationInfoWindow.SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typeface="roboto_light"
        tools:text="Tours SG, La Défense (92)"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/info_window_contact"
        style="@style/LocationInfoWindow.SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typeface="roboto_light"
        tools:text="@string/location_contact"/>

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/LocationInfoWindow.SmallText"
        android:id="@+id/info_window_audience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typeface="roboto_light"
        tools:text="@string/location_audience"/>

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/LocationInfoWindow.SmallText"
        android:id="@+id/info_window_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:typeface="roboto_light"
        tools:text="@string/location_interests"/>
</LinearLayout>
